# collective-capability-runtime

./: .gitignore  AGENTS.md  AUDIT.md  CHALLENGE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FORMAL_MODEL.md  GOVERNANCE.md  INTEROP_PIC.md  LICENSE  NOTICE  README.md  SECURITY.md  SPEC.md  agent-manifest.json  pyproject.toml
.github/actions/ccr-audit/: action.yml
.github/workflows/: ci.yml  workflow.yml
docs/: README.md  asi-proxy-acceleration.md  asi-proxy-mission.md  ccr-pic-roundtrip.md  collective-workcells.md  command-map.md  cross-repo-conformance.md  cross-repo-loop-conformance.md  distributed-runtime.md  getting-started.md  github-action.md  mcp-a2a-safety.md  measurement-protocol.md  operation-gate.md  p2-runtime-surfaces.md  performance.md  real-world-impact.md  security-audit-checklist.md
examples/asi_proxy_acceleration_bundle/: README.md  a2a_agent_card.good.json  dispatch_report.example.json  foundry_dashboard.blocked_dependency.json  mcp_invocation.good.json  observation.example.json  observation_verifier.good.json  phase_acceleration_report.expected.json  preflight.denied.json  preflight.ready_fixture.json  provider_manifest.good.json  provider_registry.good.json
examples/asi_proxy_benchmark_bundle/: README.md  baseline.json  collective.json  expected_foundry_dashboard.json  phase_report.json  residuals.jsonl  runtime_report_for_pic.json  tasks.jsonl  trc_operation_plan.json  trc_trace_report.json
examples/asi_proxy_benchmark_bundle/ccr_runtime/: README.md
examples/asi_proxy_mission_bundle/: README.md  baseline_upper_envelope.json  bundle.json  ccr_loop_state.json  mission.json  mission_state.json  packet_candidate.json  target.json  workbench_report.json
examples/collective_runtime/: README.md  baseline.json  collective.json  experiment-manifest.json  proposal-b.json
examples/minimal/: packet.json  seed.md  task.json
examples/phase_formation/: README.md  baseline.json  ccr.config.json  mock_http_report.json  pic_like_report.json  threshold.json
examples/pic_interop/: README.md  packet_for_pic.json  pic_import_example.json  pic_v050_agent_check_report.json  pic_v050_collective_certificate_candidate.json  pic_v050_phase_plan_report.json  pic_v050_provider_missing_report.json
schemas/: a2a-agent-card-report.schema.json  a2a-task-handoff-report.schema.json  activation-construction-certificate.schema.json  agent-manifest.schema.json  alias-ledger.schema.json  asi-proxy-target.schema.json  asi-proxy-threshold.schema.json  audit-report.schema.json  baseline-upper-envelope.schema.json  baseline.schema.json  blackboard-event.schema.json  bundle-validate-report.schema.json  cache-invalidation-report.schema.json  canonical-quotient-report.schema.json  capital-transition-report.schema.json  cegar-simulation-barrier.schema.json  checker-cost-report.schema.json  claim-passport.schema.json  confidence-sequence-report.schema.json  construct-validity-report.schema.json  cross-repo-conformance-report.schema.json  cross-validated-anchor-transfer.schema.json  density-ratio-transport-report.schema.json  deployment-admissibility-report.schema.json  diagnostic-reserve-report.schema.json  duplicate-mass-report.schema.json  dynamic-regime-acceleration-surface.schema.json  dynamic-risk-report.schema.json  effective-graph.schema.json  evidence-product-report.schema.json  exactness-certified-release-interval.schema.json  exchange-tensor-report.schema.json  external-ingest-report.schema.json  fcu-check-report.schema.json  generic-report.schema.json  incident-ledger.schema.json  incremental-update-report.schema.json  instrumentation-contract.schema.json  leakage-audit-report.schema.json  lifecycle-cost-report.schema.json  (+79 more)
scripts/: check_schema_registry.py
src/ccr/: __init__.py  __main__.py  cli.py  constants.py  errors.py  extensions.py  ids.py  io.py  paths.py  safe_io.py  strict.py  telemetry.py  time.py
src/ccr/adapters/: __init__.py  base.py  pic.py
src/ccr/audit/: __init__.py  pic.py  release.py  repo.py
src/ccr/blackboard/: __init__.py  events.py  replay.py  store.py
src/ccr/bundles/: __init__.py  export.py  replay.py  validate.py
src/ccr/claims/: __init__.py  audit.py  extract.py  passport.py
src/ccr/conformance/: __init__.py  pic_contract.py  reports.py
src/ccr/data/: __init__.py
src/ccr/distillation/: __init__.py  pipeline.py
src/ccr/distributed/: __init__.py  auth.py  server.py  worker.py
src/ccr/experiments/: __init__.py  protocol.py
src/ccr/gates/: __init__.py  a2a.py  mcp.py
src/ccr/ingest/: __init__.py  facade.py
src/ccr/metrics/: __init__.py  phase.py
src/ccr/mission/: __init__.py  bundle.py  ingest.py  init.py  model.py  next.py  report.py  status.py
src/ccr/operations/: __init__.py  approval.py  replay.py  verifier.py
src/ccr/packets/: __init__.py  distill.py  model.py  promotion.py  status.py  store.py
src/ccr/phase/: __init__.py  baseline.py  certify.py  eligibility.py  form.py  graph.py  (+2 more)
tests/: __init__.py  conftest.py  test_blackboard_events.py  test_cli_phase_audit_v1.py  test_cli_smoke.py  test_distributed_collective_protocol.py  test_packet_status.py  test_phase_baseline_v1.py  test_phase_engine_v1.py  test_phase_report.py  test_pic_compat_audit_v1.py  test_pic_import_mapping.py  test_promotion_rules.py  test_provider_api_v1.py  test_release_audit_v1.py  test_release_readiness_v1.py  test_residual_preservation.py  test_runtime_extensions.py  test_runtime_init.py  test_runtime_p0_p1_hardening.py  test_safety_failure_branches.py  test_schema_validation.py  test_storage_sqlite.py  test_task_leasing.py  test_task_state_machine.py  test_v080_runtime_controls.py  test_v090_loop_layer.py  test_v140_runtime_scalability.py  test_v150_asi_quickstart.py  test_v150_bundle_validate_hardening.py  test_v150_claim_bundle_hardening.py  test_v150_claim_workbench_bundle.py  test_v150_docs_agent_readiness.py  test_v150_mission_hardening.py  test_v150_mission_runtime.py  test_v150_mission_scope_isolation.py  test_v150_version_metadata.py  test_v160_a2a_gate.py  test_v160_docs_agent_readiness.py  test_v160_ingest_mission.py  (+9 more)
(+51 files in other folders)
