[project]
name = "collective-capability-runtime"
version = "1.6.0"
description = "Residual-preserving runtime for verifiable multi-agent coordination."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Collective Capability Runtime contributors" }]
keywords = [
  "asi-proxy",
  "ai-agents",
  "agent-runtime",
  "collective-intelligence",
  "multi-agent-systems",
  "distributed-ai",
  "capability-packets",
  "collective-phase",
  "phase-formation",
  "blackboard",
  "residual-ledger",
  "json-schema",
  "trusted-publishing",
  "verification",
  "postgresql",
  "task-queue",
  "oidc",
  "dpop",
  "pic-interop",
  "mcp",
  "a2a",
  "operation-replay",
  "provider-registry",
  "static-workbench",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
  "jsonschema>=4.23",
]

[project.optional-dependencies]
distributed = [
  "authlib>=1.4,<2",
  "fastapi>=0.116,<1",
  "psycopg[binary,pool]>=3.2,<4",
  "uvicorn>=0.35,<1",
]
telemetry = [
  "opentelemetry-api>=1.35,<2",
  "opentelemetry-sdk>=1.35,<2",
]
dev = [
  "hypothesis>=6.135,<7",
  "pytest>=8.2",
  "pytest-cov>=5,<8",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-jsonschema>=4.23",
]

[project.scripts]
ccr = "ccr.cli:main"

[project.urls]
Homepage = "https://github.com/kadubon/collective-capability-runtime"
Repository = "https://github.com/kadubon/collective-capability-runtime"
Issues = "https://github.com/kadubon/collective-capability-runtime/issues"
Changelog = "https://github.com/kadubon/collective-capability-runtime/blob/main/CHANGELOG.md"
Security = "https://github.com/kadubon/collective-capability-runtime/blob/main/SECURITY.md"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccr"]

[tool.hatch.build.targets.wheel.force-include]
"schemas" = "ccr/data/schemas"
"agent-manifest.json" = "ccr/data/agent-manifest.json"
"INTEROP_PIC.md" = "ccr/data/INTEROP_PIC.md"
"examples/asi_proxy_loop_bundle" = "ccr/data/examples/asi_proxy_loop_bundle"
"docs/README.md" = "ccr/data/docs/README.md"
"docs/getting-started.md" = "ccr/data/docs/getting-started.md"
"docs/command-map.md" = "ccr/data/docs/command-map.md"
"docs/asi-proxy-loop.md" = "ccr/data/docs/asi-proxy-loop.md"
"docs/agent-loop-protocol.md" = "ccr/data/docs/agent-loop-protocol.md"
"docs/performance.md" = "ccr/data/docs/performance.md"
"docs/cross-repo-loop-conformance.md" = "ccr/data/docs/cross-repo-loop-conformance.md"
"docs/collective-workcells.md" = "ccr/data/docs/collective-workcells.md"
"docs/distributed-runtime.md" = "ccr/data/docs/distributed-runtime.md"
"docs/measurement-protocol.md" = "ccr/data/docs/measurement-protocol.md"
"docs/security-audit-checklist.md" = "ccr/data/docs/security-audit-checklist.md"
"docs/asi-proxy-mission.md" = "ccr/data/docs/asi-proxy-mission.md"
"examples/asi_proxy_mission_bundle" = "ccr/data/examples/asi_proxy_mission_bundle"
"examples/collective_runtime" = "ccr/data/examples/collective_runtime"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/schemas",
  "/examples",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/NOTICE",
  "/AGENTS.md",
  "/SPEC.md",
  "/FORMAL_MODEL.md",
  "/INTEROP_PIC.md",
  "/SECURITY.md",
  "/GOVERNANCE.md",
  "/CONTRIBUTING.md",
  "/CODE_OF_CONDUCT.md",
  "/CHANGELOG.md",
  "/AUDIT.md",
  "/CHALLENGE.md",
  "/agent-manifest.json",
  "/docs",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
